--- a/templates/home.html
+++ b/templates/home.html
@@ -11,28 +11,41 @@
 
     <link rel="apple-touch-icon" href="https://apple-touch-icon.png">
 
-    <link rel="stylesheet" href="/static/vendor/normalize.css">
-    <link rel="stylesheet" type="text/stylesheet" href="/static/css/main.css">
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+
+    {% load static %}
+    {%  block extra_head %}
+        <link rel="stylesheet" href="{% static "vendor/normalize.css" %}" type="text/css"/>
+        <link rel="stylesheet" href="{% static "css/main.css" %}" type="text/css"/>
+    {% endblock %}
 
 </head>
 
 <body>
+    <main>
+        <nav>
+{#            {%  include nav.html %}#}
+        </nav>
 
-{# Top #}
-{% block headline %}
-{% endblock %}
+        <header>
+            <h1>This is HOME!</h1>
+            {# Top #}
+            {% block header %}
+            {% endblock %}
+        </header>
 
-{# Middle #}
-{% block main %}
-{% endblock %}
+        <section>
+            {# Middle #}
+            {% block main %}
+            {% endblock %}
+        </section>
 
-{# Bottom #}
-{% block main %}
-{% endblock %}
-
-
-
+        <footer>
+            {# Bottom #}
+            {% block footer %}
+            {% endblock %}
+        </footer>
+    </main>
 
 <script src="/static/vendor/jquery-3.2.1.min.js"></script>
 <script src="/static/vendor/jquery-ui.min.js"></script>
