--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,10 +1,137 @@
+/*
+ * Start Bootstrap - Full (http://startbootstrap.com/)
+ * Copyright 2013-2016 Start Bootstrap
+ * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
+ */
+
+/*
+Home Page for Shelfio Web Application - created June 17, 2017 by Steve Hanlon
+*/
+
+
+
+/*--------------------
+        NAV BAR
+----------------------*/
+
+.navbar {
+    background-color: #101010;
+    font-size: 1.3em;
+    font-family: 'Alegreya Sans SC', sans-serif;
+    padding: 6px;
+}
+
+.navbar-brand {
+    color: #f7f7f7 !important;
+}
+
+.navbar-brand:hover {
+    color: #31b0d5 !important;
+}
+
+.navbar-inverse .navbar-nav>li>a {
+    color: #f7f7f7;
+    transition: color .4s;
+}
+
+.navbar-inverse .navbar-nav>li>a:hover {
+    color: #E84B00;
+}
+
+li {
+    color: #fff !important;
+}
+
+
+/*--------------------
+        BODY
+----------------------*/
+
+/* Required margin for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 body {
-    background-color: red;
+    margin-top: 50px;
+    background-color: transparent;
+}
+
+/* Header Image Background - Change the URL below to your image path (example: ../images/background.jpg) */
+.full {
+    background: #FFDA00 url(/static/images/home_bg_img.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+
+#heading_container {
     display: flex;
     justify-content: center;
+    max-width: 100%;
+}
+
+/*Mid page heading, slogan and button*/
+/*header {*/
+    /*position: absolute;*/
+    /*top: 30vh;*/
+    /*right: 32vw;*/
+    /*!*padding: 10px;*!*/
+    /*!*width: 50%;*!*/
+    /*!*background-color: rgba(200, 100, 30, .5);*!*/
+/*}*/
+
+
+.text-vertical-center {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 90vh;
+
 }
 
 h1 {
-    color: #fff;
+    color: #101010;
+    font-size: 8em;
+    font-family: 'Days One', sans-serif;
+    /*text-shadow: 2px 3px #f6f6f6;*/
+}
 
+h3 {
+    color: #101010;
+    font-size: 4em;
+    font-family: 'Amaranth', sans-serif;
+}
+
+/*.text-vertical-center {*/
+
+
+    /*display: table-cell;*/
+    /*text-align: center;*/
+    /*vertical-align: middle;*/
+/*}*/
+
+
+/* BUTTON */
+.btn {
+	font-size:20px;
+	background-color:#E84B00;
+	padding: 20px 60px;
+	color:#fff;
+	border-radius: 2px;
+    transition: background-color .6s;
+}
+
+
+.btn-12Wrapper .btn:hover {
+    background-color: #31b0d5;
+	color: #000;
+    animation: krazy_corners 1.6s infinite cubic-bezier(.29,.26,.62,.61);
+}
+
+@keyframes krazy_corners {
+	0% {border-radius: 0 20px 20px 20px;}
+	20% {border-radius: 20px 0 20px 20px;}
+	40% {border-radius: 20px 20px 0 20px;}
+	60% {border-radius: 20px 20px 20px 0;}
+	80% {border-radius: 20px 20px 0 20px;}
+	100% {border-radius: 20px 0 20px 20px;}
 }
