--- a/templates/home.html
+++ b/templates/home.html
@@ -1,54 +1,139 @@
 <!DOCTYPE html>
-
-<html lang="en">
+<html class="full" lang="en">
+<!-- Make sure the <html> tag is set to the .full CSS class. Change the background image in the full.css file. -->
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Shelfio</title>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="">
+
+    <title>Shelfio</title>
 
     <link rel="apple-touch-icon" href="https://apple-touch-icon.png">
 
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <!-- GOOGLE FONTS -->
+    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC|Amaranth|Chau+Philomene+One|Days+One|Paytone+One" rel="stylesheet">
+
+{#    <!-- jQuery UI CSS -->#}
+{#    <link rel="stylesheet" href="/static/vendor/jquery-ui.min.css">#}
+{#    <link rel="stylesheet" href="/static/vendor/jquery-ui.structure.min.css">#}
+{#    <link rel="stylesheet" href="/static/vendor/jquery-ui.theme.min.css">#}
+
+{#        <!-- Bootstrap Core CSS -->#}
+{#        <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">#}
+{#        <!-- Custom CSS -->#}
+{#        <link rel="stylesheet" type="text/css" href="/static/css/main.css">#}
 
     {% load static %}
+
     {%  block extra_head %}
-        <link rel="stylesheet" href="{% static "vendor/normalize.css" %}" type="text/css"/>
-        <link rel="stylesheet" href="{% static "css/main.css" %}" type="text/css"/>
+
+         <!-- jQuery UI CSS -->
+        <link rel="stylesheet" href="{%  static "vendor/jquery-ui.min.css" %}">
+        <link rel="stylesheet" href="{%  static "vendor/jquery-ui.structure.min.css" %}">
+        <link rel="stylesheet" href="{%  static "vendor/jquery-ui.theme.min.css" %}">
+
+        <!-- Bootstrap Core CSS -->
+        <link rel="stylesheet" type="text/css" href="{% static "css/bootstrap.min.css" %}">
+        <!-- Custom CSS -->
+        <link rel="stylesheet" type="text/css" href="{% static "css/main.css" %}">
     {% endblock %}
+
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+{#        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>#}
+{#        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>#}
+    <![endif]-->
 
 </head>
 
 <body>
-    <main>
-        <nav>
-{#            {%  include nav.html %}#}
-        </nav>
 
-        <header>
-            <h1>This is HOME!</h1>
-            {# Top #}
-            {% block header %}
-            {% endblock %}
+    <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Shelfio</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="#">The Gallery</a>
+                    </li>
+                    <li>
+                        <a href="#">My Collections</a>
+                    </li>
+
+                    <li>
+                        <a href="#">New Collection</a>
+                    </li>
+                    <li>
+                        <a href="#">About</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+
+            <!-- Django sample -->
+            {#{%  include nav.html %}#}
+
+    </nav>
+
+    <!-- Header -->
+    <div id="heading_container">
+        <header id="top" class="header">
+            <div class="text-vertical-center">
+                <h1>SHELFIO</h1>
+                <h3>Get organized, yo!</h3>
+                <br>
+                <div class="btn-12Wrapper wrapper">
+                <a class="btn btn-1Wrapper">Get Going</a>
+                </div>
+            </div>
         </header>
+    </div>
 
-        <section>
-            {# Middle #}
-            {% block main %}
-            {% endblock %}
-        </section>
+    <section>
+        {# Middle #}
 
-        <footer>
-            {# Bottom #}
-            {% block footer %}
-            {% endblock %}
-        </footer>
-    </main>
+{#            <h1>shelfio</h1>#}
+{#            <h1>Get organized!</h1>#}
 
-<script src="/static/vendor/jquery-3.2.1.min.js"></script>
-<script src="/static/vendor/jquery-ui.min.js"></script>
-<script></script>
+    </section>
+
+    <footer>
+    </footer>
+
+    <!-- jQuery -->
+    <script src="/static/vendor/jquery-3.2.1.min.js"></script>
+    <script src="/static/vendor/jquery-ui.min.js"></script>
+    <script src="/static/js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="/static/js/bootstrap.min.js"></script>
+
+    <!-- JS Test Area -->
+    <script></script>
+
 </body>
+
 </html>
