--- a/static/css/main.css
+++ b/static/css/main.css
@@ -19,6 +19,7 @@ Home Page for Shelfio Web Application - created June 17, 2017 by Steve Hanlon
     font-size: 1.3em;
     font-family: 'Alegreya Sans SC', sans-serif;
     padding: 6px;
+    box-shadow: 2px 0 15px black;
 }
 
 .navbar-brand {
@@ -27,6 +28,7 @@ Home Page for Shelfio Web Application - created June 17, 2017 by Steve Hanlon
 
 .navbar-brand:hover {
     color: #31b0d5 !important;
+    transition: color .4s;
 }
 
 .navbar-inverse .navbar-nav>li>a {
@@ -53,6 +55,13 @@ body {
     background-color: transparent;
 }
 
+/* base.html yellow BG */
+main {
+    background-color: #FFDA00;
+    height: 100%;
+    padding-bottom: 3%;
+}
+
 /* Header Image Background - Change the URL below to your image path (example: ../images/background.jpg) */
 .full {
     background: #FFDA00 url(/static/images/home_bg_img.jpg) no-repeat center center fixed;
@@ -67,16 +76,6 @@ body {
     justify-content: center;
     max-width: 100%;
 }
-
-/*Mid page heading, slogan and button*/
-/*header {*/
-    /*position: absolute;*/
-    /*top: 30vh;*/
-    /*right: 32vw;*/
-    /*!*padding: 10px;*!*/
-    /*!*width: 50%;*!*/
-    /*!*background-color: rgba(200, 100, 30, .5);*!*/
-/*}*/
 
 
 .text-vertical-center {
@@ -134,4 +133,35 @@ h3 {
 	60% {border-radius: 20px 20px 20px 0;}
 	80% {border-radius: 20px 20px 0 20px;}
 	100% {border-radius: 20px 0 20px 20px;}
+}
+
+
+
+/*--------------------
+        FOOTER
+----------------------*/
+
+footer {
+    margin-top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #E84B00;
+    height: 15vh;
+    color: #fff;
+    font-size: 1.3em;
+    font-family: 'Alegreya Sans SC', sans-serif;
+}
+
+
+
+/*--------------------
+   Collectible Form
+----------------------*/
+
+#collect_form fieldset {
+    margin-top: 300px;
+    height: 100vh;
+    background-color: red;
+
 }
