--- a/templates/base.html
+++ b/templates/base.html
@@ -1,59 +1,116 @@
 <!DOCTYPE html>
 
-<!DOCTYPE html>
-
 <html lang="en">
-
+<!-- Bootstrap Theme from https://startbootstrap.com/template-categories/all/-->
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Shelfio</title>
-
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="">
+
+    <title>Shelfio - Base Template</title>
 
     <link rel="apple-touch-icon" href="https://apple-touch-icon.png">
 
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <!-- GOOGLE FONTS -->
+    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC|Amaranth|Chau+Philomene+One|Days+One|Paytone+One" rel="stylesheet">
 
+    <!-- HIDE LINK URLS to CSS-->
     {% load static %}
-    {% block extra_head %}
-        <link rel="stylesheet" href="{% static "vendor/normalize.css" %}" type="text/css"/>
-        <link rel="stylesheet" href="{% static "css/main.css" %}" type="text/css"/>
+    {%  block extra_head %}
+         <!-- jQuery UI CSS -->
+        <link rel="stylesheet" href="{% static "vendor/jquery-ui.min.css" %}">
+        <link rel="stylesheet" href="{% static "vendor/jquery-ui.structure.min.css" %}">
+        <link rel="stylesheet" href="{% static "vendor/jquery-ui.theme.min.css" %}">
+        <!-- Bootstrap Core CSS -->
+        <link rel="stylesheet" type="text/css" href="{% static "css/bootstrap.min.css" %}">
+        <!-- Custom CSS -->
+        <link rel="stylesheet" type="text/css" href="{% static "css/main.css" %}">
     {% endblock %}
 
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+{#        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>#}
+{#        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>#}
+    <![endif]-->
 </head>
 
 <body>
-    <main>
-        <h1>This is Base HTML!</h1>
 
-        <nav>
-{#            {%  include nav.html %}#}
+    <!-- Navigation -->
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+            <div class="container">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">Shelfio</a>
+                </div>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li>
+                            <a href="#">The Gallery</a>
+                        </li>
+                        <li>
+                            <a href="#">My Collections</a>
+                        </li>
+
+                        <li>
+                            <a href="#">New Collection</a>
+                        </li>
+                        <li>
+                            <a href="#">About</a>
+                        </li>
+                        <li>
+                            <a href="#">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- /.navbar-collapse -->
+            </div>
+            <!-- /.container -->
         </nav>
 
-        <header>
-            {# Top #}
-            {% block header %}
-            {% endblock %}
-        </header>
-
-        <section>
-            {# Middle #}
-            {% block main %}
+<!-- START MAIN AREA CONTENT-->
+    <main>
+        <section class="container">
+            {# Middle Block Content #}
+            {% block content %}
             {% endblock %}
         </section>
-
-        <footer>
-            {# Bottom #}
-            {% block footer %}
-            {% endblock %}
-        </footer>
     </main>
 
+        <!-- Footer -->
+        <footer>
+            {% block footer %}
+                <div class="row">
+                    <div class="col-lg-12">
+                        <p>Copyright &copy; SHELFIO 2017</p>
+                    </div>
+                </div>
+            {% endblock %}
+        </footer>
 
-<script src="/static/vendor/jquery-3.2.1.min.js"></script>
-<script src="/static/vendor/jquery-ui.min.js"></script>
-<script></script>
+
+    <!-- jQuery -->
+    {% load static %}
+    {%  block extra_end %}
+    <script src="{% static "vendor/jquery-3.2.1.min.js" %}"></script>
+    <script src="{% static "vendor/jquery-ui.min.js" %}"></script>
+    <script src="{% static "js/jquery.js" %}"></script>
+    <!-- Bootstrap Core JavaScript -->
+    <script src="{% static "js/bootstrap.min.js" %}"></script>
+    {% endblock %}
+    <!-- JS Test Area -->
+    <script></script>
+
 </body>
 </html>
