--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html class="full" lang="en">
+
+<!--Bootstrap template from https://startbootstrap.com/template-overviews/full/-->
 <!-- Make sure the <html> tag is set to the .full CSS class. Change the background image in the full.css file. -->
 
 <head>
@@ -18,15 +20,6 @@
     <!-- GOOGLE FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC|Amaranth|Chau+Philomene+One|Days+One|Paytone+One" rel="stylesheet">
 
-{#    <!-- jQuery UI CSS -->#}
-{#    <link rel="stylesheet" href="/static/vendor/jquery-ui.min.css">#}
-{#    <link rel="stylesheet" href="/static/vendor/jquery-ui.structure.min.css">#}
-{#    <link rel="stylesheet" href="/static/vendor/jquery-ui.theme.min.css">#}
-
-{#        <!-- Bootstrap Core CSS -->#}
-{#        <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">#}
-{#        <!-- Custom CSS -->#}
-{#        <link rel="stylesheet" type="text/css" href="/static/css/main.css">#}
 
     {% load static %}
 
@@ -54,7 +47,6 @@
 </head>
 
 <body>
-
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
@@ -92,11 +84,8 @@
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
-
-            <!-- Django sample -->
-            {#{%  include nav.html %}#}
-
     </nav>
+
 
     <!-- Header -->
     <div id="heading_container">
@@ -113,15 +102,10 @@
     </div>
 
     <section>
-        {# Middle #}
-
-{#            <h1>shelfio</h1>#}
-{#            <h1>Get organized!</h1>#}
-
     </section>
 
-    <footer>
-    </footer>
+{#    <footer>#}
+{#    </footer>#}
 
     <!-- jQuery -->
     <script src="/static/vendor/jquery-3.2.1.min.js"></script>
