--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="">
 
-    <title>Shelfio - Base Template</title>
+    {%  block title %}
+    <title>Shelfio</title>
+    {% endblock %}
 
     <link rel="apple-touch-icon" href="https://apple-touch-icon.png">
 
@@ -19,7 +21,7 @@
 
     <!-- HIDE LINK URLS to CSS-->
     {% load static %}
-    {%  block extra_head %}
+
          <!-- jQuery UI CSS -->
         <link rel="stylesheet" href="{% static "vendor/jquery-ui.min.css" %}">
         <link rel="stylesheet" href="{% static "vendor/jquery-ui.structure.min.css" %}">
@@ -28,6 +30,8 @@
         <link rel="stylesheet" type="text/css" href="{% static "css/bootstrap.min.css" %}">
         <!-- Custom CSS -->
         <link rel="stylesheet" type="text/css" href="{% static "css/main.css" %}">
+
+    {%  block extra_head %}
     {% endblock %}
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -67,10 +71,10 @@
                             <a href="#">New Collection</a>
                         </li>
                         <li>
-                            <a href="#">About</a>
+                            <a href="{% url "about" %}">About</a>
                         </li>
                         <li>
-                            <a href="#">Contact</a>
+                            <a href="{% url "contact" %}">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -89,15 +93,10 @@
     </main>
 
         <!-- Footer -->
-        <footer>
-            {% block footer %}
-                <div class="row">
-                    <div class="col-lg-12">
-                        <p>Copyright &copy; SHELFIO 2017</p>
-                    </div>
-                </div>
-            {% endblock %}
-        </footer>
+
+    {%  block content_footer %}
+        {% include 'footer.html'%}
+    {% endblock %}
 
 
     <!-- jQuery -->
