--- a/templates/collections.html
+++ b/templates/collections.html
@@ -20,8 +20,7 @@
                 <div class="row">
 
                     <div class="col-lg-12">
-                        <h1 class="page-header">My {{ Collection.name }} Collection</h1>
-                        <h3 class="page-header">Gallery View</h3>
+                        <h1 class="page-header">All My Collections</h1>
                     </div>
 
                     <div class="col-lg-3 col-md-4 col-xs-6 thumb">
