--- a/templates/base.html
+++ b/templates/base.html
@@ -23,9 +23,9 @@
     {% load static %}
 
          <!-- jQuery UI CSS -->
-        <link rel="stylesheet" href="{% static "vendor/jquery-ui.min.css" %}">
-        <link rel="stylesheet" href="{% static "vendor/jquery-ui.structure.min.css" %}">
-        <link rel="stylesheet" href="{% static "vendor/jquery-ui.theme.min.css" %}">
+        <link rel="stylesheet" type="text/css" href="{% static "vendor/jquery-ui.min.css" %}">
+        <link rel="stylesheet" type="text/css" href="{% static "vendor/jquery-ui.structure.min.css" %}">
+        <link rel="stylesheet" type="text/css" href="{% static "vendor/jquery-ui.theme.min.css" %}">
         <!-- Bootstrap Core CSS -->
         <link rel="stylesheet" type="text/css" href="{% static "css/bootstrap.min.css" %}">
         <!-- Custom CSS -->
