--- a/templates/home.html
+++ b/templates/home.html
@@ -89,9 +89,10 @@
 
     <!-- Header -->
     <div id="heading_container">
+{#        <p class="home_words_fx">stamps</p>#}
         <header id="top" class="header">
             <div class="text-vertical-center">
-                <h1>SHELFIO</h1>
+                <h1 id="home_header">SHELFIO</h1>
                 <h3>Get organized, yo!</h3>
                 <br>
                 <div class="btn-12Wrapper wrapper">
