--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,29 +1,33 @@
+{# This is the registration and sign up page #}
 {% extends 'base.html' %}
 
-{% load static %}
-
 {%  block title %}
-    <title>Collectible Form</title>
+    <title>Log In (Shelfio)</title>
 {% endblock %}
 
 
 {% block extra_head %}
-     <link rel="stylesheet" type="text/css" href="/static/collection/css/collection.css">
+     <link rel="stylesheet" type="text/css" href="/static/accounts/css/accounts.css">
 {% endblock %}
 
 
 
+
+
 {% block content %}
-    <section id="coll_form">
-        <h3>Enter a New Item</h3>
+
+    {{ form.errors }}
+
+    <section id="login_form">
+        <h3>Log in</h3>
         <!-- enctype encrypts image file to be stored in database -->
             <form action="" method="POST" enctype="multipart/form-data">
                 <!-- csrf is cross site request forgery tag.  Make sure form submission comes from
-                 a form on the actual website.  Makes sure cookie is set on your browser-->
+                 a form on the actual website.  Makes sure a cookie is set on your browser -->
                 {% csrf_token %}
                 <!-- inserts form as paragraphs -->
                 {{ form.as_p }}
-                <button type="submit" class="save btn btn-default">Save</button>
+                <button type="submit" class="save btn btn-default">Register</button>
             </form>
     </section>
 {% endblock %}
