create Collection Form View and Collecton View, resolve URLs and add links to Nav bar and Edit page buttons

--- a/accounts/static/accounts/css/accounts.css
+++ b/accounts/static/accounts/css/accounts.css
@@ -12,9 +12,19 @@
     margin: 10px auto;
     }
 
+/* Alter Bootstrap Styling for Django messages  */
+.messages {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    font-size: 3em;
+}
 
-
-
+.alert-error {
+    color: #fff;
+    background-color: #E84B00;
+    border-color: #E84B00;
+}
 
 
 /*--------------------
