--- a/templates/collection.html
+++ b/templates/collection.html
@@ -3,7 +3,7 @@
 {% extends 'base.html' %}
 
     {%  block title %}
-    <title>Collection</title>
+    <title>Collection Gallery</title>
     {% endblock %}
 
     {% load static %}
@@ -20,7 +20,7 @@
                 <div class="row">
 
                     <div class="col-lg-12">
-                        <h1 class="page-header">My {{ Collection.name }} Collection</h1>
+                        <h1 class="page-header">My {{ collection.name }} Collection</h1>
                         <h3 class="page-header">Gallery View</h3>
                     </div>
 
