--- a/collection/static/collection/css/collection.css
+++ b/collection/static/collection/css/collection.css
@@ -44,9 +44,16 @@
     box-shadow: 1px 1px 2px black;
 }
 
-/* Header */
+/* Collectible Big Header */
 .coll_header {
     color: #E84B00;
+}
+
+/* Collection Small Header */
+.coll_header_2 {
+    float: left;
+    font-size: 1.5em;
+    font-family: 'Alegreya Sans SC', sans-serif;
 }
 
 /* Header for List of Details */
@@ -55,19 +62,28 @@
     text-decoration: underline;
 }
 
+/* Collectible Image*/
+.coll_img img {
+    background-size: contain;
+    width: 300px;
+    height: 400px;
+    border-radius: 25px;
+    border: 1px solid dimgray;
+}
+
 /* List Keys bolded */
 .coll_specs span {
     font-weight: bold;
 }
 
-/* colelctible description area*/
+/* collectible description area*/
 .description {
     font-size: 1.3em;
     line-height: 200%;
 }
 
 
-/* Buttons for downloads and links*/
+/* BUTTONS for downloads and links*/
 #coll_btn {
     display: flex;
     flex-direction: row;
@@ -78,6 +94,15 @@
 .btn {
     margin: 20px 30px;
     border-radius: 10px;
+}
+
+#collectible_btns {
+    display: flex;
+    justify-content: center;
+    border: 2px solid black;
+    margin-top: 3%;
+    border-radius: 25px;
+
 }
 
 #add_links {
