--- a/templates/collection_form.html
+++ b/templates/collection_form.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {%  block title %}
-    <title>Collectible Edit Mode</title>
+    <title>Collection Form</title>
 {% endblock %}
 
 
@@ -12,10 +12,9 @@
 {% endblock %}
 
 
-
 {% block content %}
     <section id="coll_form">
-        <h3>Edit Your Item</h3>
+        <h3>Create a New Collection</h3>
         <!-- enctype encrypts image file to be stored in database -->
             <form action="" method="POST" enctype="multipart/form-data">
                 <!-- csrf is cross site request forgery tag.  Make sure form submission comes from
