--- a/templates/collections.html
+++ b/templates/collections.html
@@ -3,7 +3,7 @@
 {% extends 'base.html' %}
 
     {%  block title %}
-    <title>Collection</title>
+    <title>All My Collections Gallery</title>
     {% endblock %}
 
     {% load static %}
@@ -20,7 +20,7 @@
                 <div class="row">
 
                     <div class="col-lg-12">
-                        <h1 class="page-header">All My Collections</h1>
+                        <h1 class="page-header">{{ request.user }} Collections Gallery</h1>
                     </div>
 
                     <div class="col-lg-3 col-md-4 col-xs-6 thumb">
