--- a/templates/collectible.html
+++ b/templates/collectible.html
@@ -66,10 +66,9 @@
     <aside id="collectible_btns">
         <div>
             {# TODO: change links to reverse link with template tags #}
-{#            {% url 'collectible_edit' 'collections:collectible_edit' collectible_slug=collectible.slug %}#}
             <button id="edit_btn" class="btn"><a href="/{{ request.user }}/collectible/edit/{{ collectible.slug }}">Edit</a></button>
             <button id="addnew_btn" class="btn"><a href="/{{ request.user }}/collectible/create/">Add Another</a></button>
-            <button id="view_coll_btn" class="btn"><a href="/{{ request.user }}/collection/{{ collection.slug }}">View Collection</a></button>
+            <button id="view_coll_btn" class="btn"><a href="/{{ request.user }}/collection/{{ collectible.collection.slug }}">View Collection</a></button>
         </div>
     </aside>
 
