--- a/templates/base.html
+++ b/templates/base.html
@@ -70,13 +70,15 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
+                        <!-- View All User's Collections -->
                         <li>
                             <a href="/{{ request.user }}/category">My Gallery</a>
                         </li>
+                        <!-- View Collection create Form -->
                         <li>
                             <a href="/{{ request.user }}/collection/create/">New Collection</a>
                         </li>
-
+                        <!-- View Collectible create Form -->
                         <li>
                             <a href="/{{ request.user }}/collectible/create/">Add Collectible</a>
                         </li>
