--- a/templates/collection.html
+++ b/templates/collection.html
@@ -18,76 +18,94 @@
 
             <div class="container">
                 <div class="row">
-
+                    {# Collection heading #}
                     <div class="col-lg-12">
                         <h1 class="page-header">My {{ collection.name }} Collection</h1>
                         <h3 class="page-header">Gallery View</h3>
                     </div>
 
-                    <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                        <a class="thumbnail" href="#">
-                            <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-                        </a>
-                    </div>
-                    <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                        <a class="thumbnail" href="#">
-                            <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-                        </a>
-                    </div>
-                    <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                        <a class="thumbnail" href="#">
-                            <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-                        </a>
-                    </div>
-                    <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                        <a class="thumbnail" href="#">
-                            <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-                        </a>
-                    </div>
-                    <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                        <a class="thumbnail" href="#">
-                            <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-                        </a>
-                    </div>
-                    <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                        <a class="thumbnail" href="#">
-                            <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-                        </a>
-                    </div>
-                    <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                        <a class="thumbnail" href="#">
-                            <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-                        </a>
-                    </div>
-                    <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                        <a class="thumbnail" href="#">
-                            <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-                        </a>
-                    </div>
-                    <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                        <a class="thumbnail" href="#">
-                            <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-                        </a>
-                    </div>
-                    <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                        <a class="thumbnail" href="#">
-                            <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-                        </a>
-                    </div>
-                    <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                        <a class="thumbnail" href="#">
-                            <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-                        </a>
-                    </div>
-                    <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                        <a class="thumbnail" href="#">
-                            <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-                        </a>
-                    </div>
+                    {# Show all collectibles in Collection #}
+                     {% for collectible in collectibles %}
+                        <div class="col-lg-3 col-md-4 col-xs-6 thumb">
 
-                </div> <!-- end #row-->
+                            <item class="collectible_gallery">
+                                <a class="thumbnail" href="/{{ request.user }}/collectible/{{ collectible.slug }}">  {# Shows thumbnail of collectible #}
+                                    <img class="img-responsive" alt="collectible_image" src="{{ collectible.image.url }}" />  {# Link to collectible detail page #}
+                                </a>
+                            </item>
+                         </div>
+                    {% endfor %}
+
+                </div> <!-- end .row-->
             </div> <!-- end .container-->
         {% endblock %}
-
     </section>
 
+
+
+
+
+
+<!-- ORIGINAL CODE REFERENCE STORAGE -->
+
+{##}
+{#                    <div class="col-lg-3 col-md-4 col-xs-6 thumb">#}
+{#                        <a class="thumbnail" href="#">#}
+{#                            <img class="img-responsive" src="http://placehold.it/400x300" alt="">#}
+{#                        </a>#}
+{#                    </div>#}
+{#                    <div class="col-lg-3 col-md-4 col-xs-6 thumb">#}
+{#                        <a class="thumbnail" href="#">#}
+{#                            <img class="img-responsive" src="http://placehold.it/400x300" alt="">#}
+{#                        </a>#}
+{#                    </div>#}
+{#                    <div class="col-lg-3 col-md-4 col-xs-6 thumb">#}
+{#                        <a class="thumbnail" href="#">#}
+{#                            <img class="img-responsive" src="http://placehold.it/400x300" alt="">#}
+{#                        </a>#}
+{#                    </div>#}
+{#                    <div class="col-lg-3 col-md-4 col-xs-6 thumb">#}
+{#                        <a class="thumbnail" href="#">#}
+{#                            <img class="img-responsive" src="http://placehold.it/400x300" alt="">#}
+{#                        </a>#}
+{#                    </div>#}
+{#                    <div class="col-lg-3 col-md-4 col-xs-6 thumb">#}
+{#                        <a class="thumbnail" href="#">#}
+{#                            <img class="img-responsive" src="http://placehold.it/400x300" alt="">#}
+{#                        </a>#}
+{#                    </div>#}
+{#                    <div class="col-lg-3 col-md-4 col-xs-6 thumb">#}
+{#                        <a class="thumbnail" href="#">#}
+{#                            <img class="img-responsive" src="http://placehold.it/400x300" alt="">#}
+{#                        </a>#}
+{#                    </div>#}
+{#                    <div class="col-lg-3 col-md-4 col-xs-6 thumb">#}
+{#                        <a class="thumbnail" href="#">#}
+{#                            <img class="img-responsive" src="http://placehold.it/400x300" alt="">#}
+{#                        </a>#}
+{#                    </div>#}
+{#                    <div class="col-lg-3 col-md-4 col-xs-6 thumb">#}
+{#                        <a class="thumbnail" href="#">#}
+{#                            <img class="img-responsive" src="http://placehold.it/400x300" alt="">#}
+{#                        </a>#}
+{#                    </div>#}
+{#                    <div class="col-lg-3 col-md-4 col-xs-6 thumb">#}
+{#                        <a class="thumbnail" href="#">#}
+{#                            <img class="img-responsive" src="http://placehold.it/400x300" alt="">#}
+{#                        </a>#}
+{#                    </div>#}
+{#                    <div class="col-lg-3 col-md-4 col-xs-6 thumb">#}
+{#                        <a class="thumbnail" href="#">#}
+{#                            <img class="img-responsive" src="http://placehold.it/400x300" alt="">#}
+{#                        </a>#}
+{#                    </div>#}
+{#                    <div class="col-lg-3 col-md-4 col-xs-6 thumb">#}
+{#                        <a class="thumbnail" href="#">#}
+{#                            <img class="img-responsive" src="http://placehold.it/400x300" alt="">#}
+{#                        </a>#}
+{#                    </div>#}
+{#                    <div class="col-lg-3 col-md-4 col-xs-6 thumb">#}
+{#                        <a class="thumbnail" href="#">#}
+{#                            <img class="img-responsive" src="http://placehold.it/400x300" alt="">#}
+{#                        </a>#}
+{#                    </div>#}
