--- a/collection/static/collection/css/collection.css
+++ b/collection/static/collection/css/collection.css
@@ -28,8 +28,8 @@
 #coll_container {
     display: flex;
     justify-content: center;
+    max-width: 100%;
 }
-
 
 /* wallpaper for Collectible View */
 #collect_detail {
@@ -39,7 +39,7 @@
     align-items: center;
     background: url("/static/collection/images/bg/paper.jpeg") no-repeat center center;
     background-size: 100% 100%;
-    width: 70%;
+    width: 80%;
     padding: 4%;
     box-shadow: 1px 1px 2px black;
 }
@@ -51,7 +51,6 @@
 
 /* Collection Small Header */
 .coll_header_2 {
-    float: left;
     font-size: 1.5em;
     font-family: 'Alegreya Sans SC', sans-serif;
 }
@@ -83,7 +82,7 @@
 }
 
 
-/* BUTTONS for downloads and links*/
+/* ----- BUTTONS for downloads and links ------*/
 #coll_btn {
     display: flex;
     flex-direction: row;
@@ -102,7 +101,6 @@
     border: 2px solid black;
     margin-top: 3%;
     border-radius: 25px;
-
 }
 
 #add_links {
@@ -133,14 +131,91 @@
    Collection Gallery View
 ---------------------------*/
 
-.collectible_gallery {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    flex-wrap: wrap;
+/* TODO: Make images uniform regardless of size imported */
+
+
+
+
+
+/*-----------------------------
+   MODAL WINDOW DETAIL POP-UP
+-------------------------------*/
+/* source: https://www.w3schools.com/howto/howto_css_modals.asp */
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
-/*.collectible_gallery img{*/
-    /*width: 8%;*/
-    /*height: 10%;*/
-/*}*/
+/* Modal Content/Box */
+.modal-content {
+    display: flex;
+    justify-content: center;
+    /*background-color: #fefefe;*/
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Make it more or less, depending on screen size */
+    background-size: 5% 5%;
+    -webkit-animation-name: zoomIn;
+    -webkit-animation-duration: 0.6s;
+    animation-name: zoomIn;
+    animation-duration: 0.6s;
+}
+
+/* The Close Button */
+.close {
+    align-self: flex-end;
+    color: #E84B00;
+    font-size: 68px;
+    font-weight: bold;
+    margin: 10px;
+}
+
+.close:hover,
+.close:focus {
+    color: #E84B00;
+    text-decoration: none;
+    cursor: pointer;
+    transition: .5s;
+}
+
+.modal-content-away {
+	-webkit-animation-name: zoomOut;
+    -webkit-animation-duration: 1s;
+    animation-name: zoomOut;
+    animation-duration: 1s;
+}
+
+/* Entrance Animation */
+@-webkit-keyframes zoomIn {
+    from {-webkit-transform:scale(0)}
+    to {-webkit-transform:scale(1)}
+}
+
+@keyframes zoomIn {
+    from {transform:scale(0)}
+    to {transform:scale(1)}
+}
+
+/* Exit Animation */
+@-webkit-keyframes zoomOut {
+    from {-webkit-transform:scale(1)}
+    to {-webkit-transform:scale(0)}
+}
+
+@keyframes zoomOut {
+    from {transform:scale(1)}
+    to {-transform:scale(0)}
+}
+
+
