try to set-up view for User Account Collections View, add more collectibles to a Collection view for CSS tweaking

--- a/accounts/static/accounts/css/accounts.css
+++ b/accounts/static/accounts/css/accounts.css
@@ -45,5 +45,10 @@
 
 
 /*--------------------
-   Something else
+   Log In page
 ----------------------*/
+
+.sign_up {
+    display: flex;
+    justify-content: flex-end;
+}
