--- a/collection/templates/collection/collection.html
+++ b/collection/templates/collection/collection.html
@@ -91,7 +91,7 @@
                     </div>  <!-- end of .modal-content -->
                 </div> <!-- end of #myModal -->
 
-            {% endfor %}
+            {% endfor %}  <!-- end FOR LOOP-->
 
         </div> <!-- end .row-->
     </div> <!-- end .container-->
