--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Shelfio</a>
+                    <a class="navbar-brand" href="/">Shelfio</a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -87,6 +87,9 @@
                         </li>
                         <li>
                             <a href="{% url "contact" %}">Contact</a>
+                        </li>
+                        <li>
+                            <a href="/accounts/login">Log In</a>
                         </li>
                     </ul>
                 </div>
