got User Collections webpage to show with view adjustments, some extra CSS tweaking for modal window too

--- a/collection/templates/collection/collection.html
+++ b/collection/templates/collection/collection.html
@@ -51,7 +51,7 @@
 
                                 {# Collectible Image and Name #}
                                 <figure class="coll_img">
-                                    <img src="{{ collectible.image.url }}">
+                                    <img class="img_modal" src="{{ collectible.image.url }}">
                                 </figure>
 
                                 {# Collectible Heading #}
