--- a/templates/home.html
+++ b/templates/home.html
@@ -100,7 +100,7 @@
                 <h3>Get organized, yo!</h3>
                 <br>
                 <div class="btn-12Wrapper wrapper">
-                <a class="btn btn-1Wrapper">Get Going</a>
+                <a class="btn btn-1Wrapper" href="/accounts/login/">Get Going</a>
                 </div>
             </div>
         </header>
