--- a/collection/static/collection/css/collection.css
+++ b/collection/static/collection/css/collection.css
@@ -46,11 +46,16 @@
 
 /* Collectible Big Header */
 .coll_header {
+    display: flex;
+    justify-content: center;
+    font-size: 2.5em;
     color: #E84B00;
 }
 
 /* Collection Small Header */
 .coll_header_2 {
+    display: flex;
+    justify-content: center;
     margin-bottom: 20px;
     font-size: 2.5em;
     font-family: 'Alegreya Sans SC', sans-serif;
@@ -63,12 +68,10 @@
 }
 
 /* Collectible Image*/
-.coll_img img {
-    background-size: contain;
-    width: 50%;
-    height: 50%;
-    border-radius: 25px;
-    border: 1px solid dimgray;
+.coll_img {
+    display: flex;
+    justify-content: center;
+    border-radius: 5px;
 }
 
 /* List Keys bolded */
@@ -176,6 +179,18 @@
     animation-duration: 0.6s;
 }
 
+
+/* Image for Modal window */
+/* Collectible Image*/
+.img_modal {
+    background-size: contain;
+    width: 30%;
+    height: 30%;
+    border-radius: 5px;
+    box-shadow: 1px 0 2px grey;
+}
+
+
 /* The Close Button */
 .close {
     align-self: flex-end;
@@ -234,8 +249,17 @@
 
 @media (max-width: 769px) {
 
+    .coll_header {
+    font-size: 1.5em;
+    }
+
+    .coll_header_2 {
+    margin-bottom: 20px;
+    font-size: 1.5em;
+    }
 }
 
 @media (max-width: 569px) {
+
 
 }
