--- a/collection/templates/collection/collection.html
+++ b/collection/templates/collection/collection.html
@@ -20,7 +20,7 @@
             <div class="row">
             {# Collection heading #}
             <div class="col-lg-12">
-                <h1 class="page-header">My {{ collection.name }} Collection</h1>
+                <h1 class="page-header">{{ collection.name }} Collection</h1>
                 <h3 class="page-header">Gallery View</h3>
             </div>
 
