--- a/collection/templates/collection/collections.html
+++ b/collection/templates/collection/collections.html
@@ -19,20 +19,24 @@
         <div class="container">
             <div class="row">
 
-                {# Collection heading #}
+                {# Collections Gallery heading #}
                 <div class="col-lg-12">
-                    <h1 class="page-header">Collections of {{ collection.owner }}</h1>
+                    <h1 class="page-header">{{ request.user }}'s Collections</h1>
                     <h3 class="page-header">Gallery View</h3>
                 </div>
 
                 {# FOR LOOP - Show all collectibles in Collection #}
                 {% for collection in collections %}
                     <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                        <div data-collectible="{{ forloop.counter }}" class="myBtn collectible_gallery">
+                        <div data-collection="{{ forloop.counter }}" class="myBtn collections_gallery">
+
                             {# Link to Modal window of collectible details #}
-                            <img class="thumbnail img-responsive" alt="collectible_image"
-                                 src="{{ collection.image.url }}"/>
+                            <a href="{% url 'collections:collection_detail' username=request.user collection_slug=collection.slug %}">
+                                <img class="thumbnail img-responsive" alt="user_collection_images" src="{{ collection.image.url }}"/>
+                            </a>
+
                         </div>
+                                {{ collection.name  }}  <!-- label below picture-->
                     </div>
                 {% endfor %}  <!-- end FOR LOOP-->
             </div> <!-- end #row-->
