--- a/templates/base.html
+++ b/templates/base.html
@@ -72,7 +72,7 @@
                     <ul class="nav navbar-nav">
                         <!-- View All User's Collections -->
                         <li>
-                            <a href="/{{ request.user }}/category">My Gallery</a>
+                            <a href="/{{ request.user }}/collections">My Gallery</a>
                         </li>
                         <!-- View Collection create Form -->
                         <li>
